update readme, update docs path, added bearer auth api doc
